pkgs/ffigen/test/collision_tests/reserved_keyword_collision.h

// Copyright (c) 2024, the Dart project authors. Please see the AUTHORS file
// for details. All rights reserved. Use of this source code is governed by a
// BSD-style license that can be found in the LICENSE file.

struct abstract {};
union show {};
enum export { covariant };
void implements(int dynamic, int in, int deferred) {}
int import = 123;
typedef void var;

// Regression test for https://github.com/dart-lang/native/issues/2795
struct Repro2795 {
  void (*var)(void* in);
};